--- a/lib/Assets/debugbar.css
+++ b/lib/Assets/debugbar.css
@@ -5,6 +5,7 @@
 	z-index: 99999999;
 	width: 100%;
 	font-family: inherit;
+	font-size: 18px;
 }
 
 .tba_debug_bar * {
@@ -37,16 +38,25 @@
 	color: #FFF;
 }
 
-.tba_debug_bar__close {
-	font-weight: bold;
-	font-family: inherit;
+.tba_debug_bar__control {
+	display: flex;
+}
+
+.tba_debug_bar__controlBtn {
 	cursor: pointer;
 	padding: 4px 12px;
+	width: 16px;
+	height: 16px;
+
+	svg {
+		width: 100%;
+		height: 100%;
+	}
 }
 
 .tba_debug_bar__head {
 	position: absolute;
-	top: -38px;
+	top: -28px;
 	left: 0;
 	width: 100%;
 	display: flex;
@@ -63,14 +73,14 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	width: 25px;
-	height: 18px;
+	width: 12px;
+	height: 8px;
 	line-height: 1;
 	padding: 10px;
 	background-color: red;
 	border-radius: 50%;
 	color: white;
-	font-size: 24px;
+	font-size: 14px;
 	font-weight: bold;
 	cursor: pointer;
 }
@@ -95,7 +105,7 @@
 
 .tba_debug_bar__body {
 	height: 0px;
-	background-color: #d3a2a2;
+	background-color: #ddd;
 	overflow: hidden;
 }
 
@@ -113,7 +123,7 @@
 	white-space: break-spaces;
 	box-sizing: border-box;
 	flex-direction: column;
-	gap: 32px;
+	gap: 16px;
 }
 
 .vis {
@@ -134,6 +144,7 @@
 	padding: 2px 8px;
 	cursor: pointer;
 	transition: background-color 0.3s ease, color 0.3s ease;
+	margin-left: 16px;
 }
 
 .tba_debug_bar__button:hover {
@@ -141,8 +152,29 @@
 	color: #FFF;
 }
 
+.tba_debug_bar__line:not(:last-child):after {
+	content: '';
+	display: block;
+	width: 100%;
+	margin-left: auto;
+	margin-right: auto;
+	height: 1px;
+	background-color: #000;
+	opacity: 0.3;
+	margin-top: 16px;
+}
+
+.tba_debug_bar__line .tba_debug_bar__calledFrom {
+	font-size: 14px;
+	color: #777;
+	margin-top: 4px;
+}
+
 .tba_debug_bar__line.removed {
+	display: flex;
+	align-items: center;
 	text-decoration: line-through;
+	text-decoration-thickness: 2px;
 }
 
 .tba_debug_bar__resizeLine {
@@ -155,4 +187,27 @@
 
 .tba_debug_bar__resizeLine.resizable {
 	cursor: ns-resize;
+}
+
+.tba_debug_bar__collapsedOpener {
+	display: none;
+	bottom: 0;
+	left: 0;
+	background-color: red;
+	padding: 4px 8px 2px 4px;
+	border-radius: 0 50% 0 0;
+	cursor: pointer;
+	color: #fff;
+	font-size: 14px;
+	font-weight: 700;
+}
+
+.tba_debug_bar__collapsedOpener.no-error {
+	opacity: 0.5;
+}
+
+.tba_debug_bar__collapsedOpener.vis {
+	display: block;
+	position: fixed;
+	z-index: 1000;
 }
